syntax = "proto3";

package io.harness.pms.plan;

option java_multiple_files = true;

import "io/harness/pms/advisers/advisers.proto";
import "io/harness/pms/facilitators/facilitators.proto";
import "io/harness/pms/steps/step_type.proto";
import "io/harness/pms/steps/skip_type.proto";
import "io/harness/pms/refobjects/ref_objects.proto";

message PlanNodeProto {
  string uuid = 1;
  string name = 2;
  io.harness.pms.steps.StepType stepType = 3;
  string identifier = 4;
  string group = 5;
  string stepParameters = 6;
  repeated io.harness.pms.refobjects.RefObject rebObjects = 7;
  repeated io.harness.pms.advisers.AdviserObtainment adviserObtainments = 8;
  repeated io.harness.pms.facilitators.FacilitatorObtainment facilitatorObtainments = 9;
  bool skipExpressionChain = 10;
  io.harness.pms.steps.SkipType skipType = 11;
}
